Add more config options, require bot.json.
Add config options for IRC server port and SSL and implement both plus
server password. Also, cause bot to die if bot.json is not present.

--- a/bot.json.sample
+++ b/bot.json.sample
@@ -1,8 +1,10 @@
 {
   "nick":"TripleSRuby",
   "user":"TripleSRuby",
-  "password":"",
   "server":"irc.freenode.org",
+  "port": 6667,
+  "ssl": false,
+  "password":"",
   "channels":[
     ""
   ]
