Load plugins from config instead of triples.rb makes more sense and allows local plugins to differ from head

--- a/bot.json.sample
+++ b/bot.json.sample
@@ -12,4 +12,7 @@
   "listenaddress": "127.0.0.1",
   "owner": "",
   "database": "app.db"
+  "plugins":[
+    "FuckYeah", "FML", "CatFact", "CatFace", "Test", "Permissions", "Wiki", "ManagePlugins", "Hello"
+  ]
 }
