Add FrogTips to default plugins list.

--- a/bot.json.sample
+++ b/bot.json.sample
@@ -13,6 +13,6 @@
   "owner": "",
   "database": "app.db",
   "plugins":[
-    "FuckYeah", "FML", "CatFact", "CatFace", "Test", "Permissions", "Wiki", "ManagePlugins", "Hello"
+    "FuckYeah", "FML", "CatFact", "CatFace", "Test", "Permissions", "Wiki", "ManagePlugins", "Hello", "FrogTips"
   ]
 }
